--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
     "react-tailwindcss-datepicker": "^1.7.2",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
